--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,18 @@
-@(message: String)
+@(columns: List[(String,String)])
 
 @main("Welcome to Play 2.1") {
-    
-    @play20.welcome(message)
-    
+
+  <table>
+    <tr>
+      <th>Column Name</th>
+      <th>Type</th>
+    </tr>
+    @for(column <- columns) {
+      <tr>
+        <td>@column._1</td>
+        <td>@column._2</td>
+      </tr>
+    }
+  </table> 
+
 }
